third_party/move/move-compiler-v2/tests/checking/typing/constant_invalid_base_type.exp

Diagnostics:
error: Not a valid constant expression.
  ┌─ tests/checking/typing/constant_invalid_base_type.move:6:24
  │
6 │     const C1: signer = abort 0;
  │                        ^^^^^^^
  │                        │
  │                        Invalid call or operation in constant

error: Not a valid constant expression.
  ┌─ tests/checking/typing/constant_invalid_base_type.move:7:19
  │
7 │     const C2: S = S{};
  │                   ^^^
  │                   │
  │                   Invalid call or operation in constant

error: Not a valid constant expression.
  ┌─ tests/checking/typing/constant_invalid_base_type.move:8:19
  │
8 │     const C3: R = R{};
  │                   ^^^
  │                   │
  │                   Invalid call or operation in constant

error: Not a valid constant expression.
  ┌─ tests/checking/typing/constant_invalid_base_type.move:9:27
  │
9 │     const C4: vector<S> = abort 0;
  │                           ^^^^^^^
  │                           │
  │                           Invalid call or operation in constant

error: Not a valid constant expression.
   ┌─ tests/checking/typing/constant_invalid_base_type.move:10:27
   │
10 │     const C5: vector<R> = abort 0;
   │                           ^^^^^^^
   │                           │
   │                           Invalid call or operation in constant

error: Not a valid constant expression.
   ┌─ tests/checking/typing/constant_invalid_base_type.move:11:35
   │
11 │     const C6: vector<vector<S>> = abort 0;
   │                                   ^^^^^^^
   │                                   │
   │                                   Invalid call or operation in constant

error: Not a valid constant expression.
   ┌─ tests/checking/typing/constant_invalid_base_type.move:12:35
   │
12 │     const C7: vector<vector<R>> = abort 0;
   │                                   ^^^^^^^
   │                                   │
   │                                   Invalid call or operation in constant
